<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_large"
        android:paddingTop="@dimen/margin_medium"
        tools:context=".ui.MainActivity">

        <include
            layout="@layout/incl_title"
            android:paddingLeft="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_medium" />

        <include
            layout="@layout/incl_divider_block"
            android:paddingLeft="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_medium" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_medium">

            <TextView
                android:id="@+id/tv_device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"

                android:layout_marginBottom="10dp"
                android:text="设备名称"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_device_name"
                android:layout_alignParentLeft="true"

                android:text="mac"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btn_reconnect"
                style="@style/BlueButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="重连" />

        </RelativeLayout>

        <include layout="@layout/incl_divider_block" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:paddingLeft="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_medium">

            <TextView
                android:id="@+id/tv_brightness_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"

                android:drawableLeft="@mipmap/brightness"
                android:drawablePadding="4dp"
                android:text="@string/brightness"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_brightness_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:drawablePadding="4dp"
                android:text="10%"
                android:textColor="@android:color/black" />

                            <SeekBar
                    android:id="@+id/sb_brightness"
                    style="@style/CustomSeekBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_brightness_tip"
                    android:layout_centerInParent="true"
                    android:max="100"
                    android:min="2"
                    android:progress="20" />
        </RelativeLayout>

        <include
            layout="@layout/incl_divider_block"
            android:paddingLeft="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:orientation="vertical"
            android:paddingLeft="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_medium">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableLeft="@mipmap/static_text"
                android:drawablePadding="4dp"
                android:text="@string/static_text"
                android:textColor="@android:color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium">

                <TextView
                    android:id="@+id/tv_static_textsize_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"

                    android:drawablePadding="4dp"
                    android:text="@string/static_text_size"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tv_static_textsize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:drawablePadding="4dp"
                    android:text="小"
                    android:textColor="@android:color/black" />

                <SeekBar
                    android:id="@+id/sb_static_textsize"
                    style="@style/CustomSeekBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_static_textsize_tip"
                    android:layout_centerInParent="true"
                    android:max="3"
                    android:min="1"
                    android:progress="0" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:gravity="center_vertical"
                android:background="@drawable/edittext_border"
                android:orientation="horizontal"
                android:padding="4dp">

                <EditText
                    android:id="@+id/et_static_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_static_text"
                    android:padding="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_medium" />

                <Button
                    android:id="@+id/btn_send_static_text"
                    style="@style/BlueButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/send" />
            </LinearLayout>

        </LinearLayout>

        <include
            layout="@layout/incl_divider_line"
            android:paddingLeft="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:orientation="vertical"
            android:paddingLeft="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_medium">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableLeft="@mipmap/scroll_text"
                android:drawablePadding="4dp"
                android:text="@string/scroll_text"
                android:textColor="@android:color/black" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium">

                <TextView
                    android:id="@+id/tv_scroll_textsize_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"

                    android:drawablePadding="4dp"
                    android:text="@string/static_text_size"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tv_scroll_textsize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:drawablePadding="4dp"
                    android:text="小"
                    android:textColor="@android:color/black" />

                <SeekBar
                    android:id="@+id/sb_scroll_textsize"
                    style="@style/CustomSeekBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_scroll_textsize_tip"
                    android:layout_centerInParent="true"
                    android:max="3"
                    android:min="1"
                    android:progress="0" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium">

                <TextView
                    android:id="@+id/tv_scroll_text_speed_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"

                    android:drawablePadding="4dp"
                    android:text="@string/scroll_speed"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tv_scroll_text_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:drawablePadding="4dp"
                    android:text="慢"
                    android:textColor="@android:color/black" />

                <SeekBar
                    android:id="@+id/sb_scroll_text_speed"
                    style="@style/CustomSeekBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_scroll_text_speed_tip"
                    android:layout_centerInParent="true"
                    android:max="3"
                    android:min="1"
                    android:progress="0" />
            </RelativeLayout>
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_gravity="center_vertical"
                android:background="@drawable/edittext_border"
                android:orientation="horizontal"
                android:padding="4dp">

                <EditText
                    android:id="@+id/et_scroll_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_scroll_text"
                    android:padding="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_medium" />

                <Button
                    android:id="@+id/btn_send_scroll_text"
                    style="@style/BlueButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/send" />
            </LinearLayout>

        </LinearLayout>

        <include
            layout="@layout/incl_divider_block"
            android:paddingLeft="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_medium" />

        <RelativeLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginRight="50dp">

            <TextView
                android:id="@+id/btn_draw_normal"
                style="@style/ActionTextStyle"
                android:background="@drawable/edittext_border"
                android:drawableTop="@mipmap/pixel"
                android:text=" 画个图 " />


            <TextView
                android:id="@+id/btn_draw_image"
                style="@style/ActionTextStyle"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:background="@drawable/edittext_border"
                android:drawableTop="@mipmap/drawapic"
                android:text="显示图片" />


            <TextView
                android:id="@+id/btn_draw_gif"
                style="@style/ActionTextStyle"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:background="@drawable/edittext_border"
                android:drawableTop="@mipmap/gif"
                android:text="显示GIF" />
        </RelativeLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>